# imageNet_classification_with_deep_CNN

./: .gitignore  GEMINI.md  README.md  main.py  pyproject.toml  requirements.txt
configs/: base.yaml  pytorch.yaml  tensorflow.yaml
docs/instructions/: general-setup-before-PyTorch.md
docs/instructions/evaluation/: 01_instruction_for_evaluating_trained_models.md
docs/instructions/for_PyTorch/: 01_PyTorch_core_implementation.md  02_PyTorch_model_eval_and_metrics_logging.md
docs/instructions/for_tensorflow/: 01_TF_core_implementation.md  01_setting_up_tensorflow_config.md  02_TF_core_full_implementation.md  02_TF_training_and_model_build.md
docs/project_guide/: folder_structure.md  project_structure.md
docs/project_progress/: phase-0-project-setup-&-data-pre-processing.md  progress.md
docs/troubleshooting/: cuda_issues.md
outputs/metrics/eval_20251203-002049/: best_model_metrics.json  last_model_metrics.json
outputs/predictions/: predictions_best_model_pytorch_20251203-225445.csv  predictions_best_model_tensorflow_20251203-225445.csv
scripts/: download_data.py  evaluate_all_models.py  preprocess_data.py
scripts/pytorch/: run_eval.py
scripts/tensorflow/: run.sh  run_eval.py  run_train.py  verify_data.py  verify_eval.py  verify_model.py
src/common/: paths.py  utils.py
src/pytorch/: data.py  eval.py  model.py  train.py  transforms.py
src/tensorflow/: data.py  eval.py  model.py  train.py  transforms.py  utils.py
