[project]
name = "imageNet_classification_with_deep_CNN"
version = "0.1.0"
description = "Deep CNN models for image classification (PyTorch, TensorFlow, Hugging Face)"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
  "torch",
  "torchvision",
  "torchaudio",
  "tensorflow",
  "numpy",
  "pandas",
  "scikit-learn",
  "matplotlib",
  "Pillow",
  "opencv-python",
  "tqdm",
  "albumentations",
  "transformers",
  "datasets",
  "huggingface_hub",
  "pyyaml",
  "python-dotenv",
  "kaggle",
  "seaborn"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
# Use uv for environment + dependency management

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }
torchaudio = { index = "pytorch" }
